--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="ThemeFactory.net">
+    <meta name="description" content="Pagina web desarollada para TAW, MNTI UMU">
+    <meta name="author" content="Amaia y Nicolas">
 
-    <title>Jumbotron Template for Bootstrap</title>
+    <title>Guía Pokémon GO !</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="./css/jumbotron.css" rel="stylesheet">
+    <link href="./css/main.css" rel="stylesheet">
 
   </head>
 
@@ -30,14 +30,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand projectname" href="#">Pokémon Go !</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
 
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li class="active"><a href="#">Inicio</a></li>
+            <li><a href="#">Nostros</a></li>
+            <li><a href="/pokedex.html">Pokédex</a></li>
           </ul>
 
         </div><!--/.navbar-collapse -->
@@ -120,10 +120,20 @@ The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for t
         </div>
       </div>
 
-      <footer>
-        <p>&copy; 2015 Company, Inc.</p>
-      </footer>
     </div> <!-- /container -->
+
+  <div class="text-center footer">
+      <hr />
+      <div class="row">
+          <div class="col-lg-12">
+              <ul class="nav nav-pills nav-justified footer-nav">
+                  <li><a href="#">© 2022 PoKeMoN Go !</a></li>
+                  <li><a href="/terminos.html">Términos del servicio</a></li>
+                  <li><a href="/privacidad.html">Privacidad</a></li>
+              </ul>
+          </div>
+      </div>
+  </div>
 
 
     <!-- Bootstrap core JavaScript
