--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Inicio</a></li>
             <li><a href="#">Nostros</a></li>
-            <li><a href="/pokedex.html">Pokédex</a></li>
+            <li><a href="pokedex.html">Pokédex</a></li>
           </ul>
 
         </div><!--/.navbar-collapse -->
@@ -128,8 +128,8 @@ The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for t
           <div class="col-lg-12">
               <ul class="nav nav-pills nav-justified footer-nav">
                   <li><a href="#">© 2022 PoKeMoN Go !</a></li>
-                  <li><a href="/terminos.html">Términos del servicio</a></li>
-                  <li><a href="/privacidad.html">Privacidad</a></li>
+                  <li><a href="terminos.html">Términos del servicio</a></li>
+                  <li><a href="privacidad.html">Privacidad</a></li>
               </ul>
           </div>
       </div>
