--- a/terminos.html
+++ b/terminos.html
@@ -30,14 +30,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand projectname" href="/index.html">Pokémon Go !</a>
+          <a class="navbar-brand projectname" href="index.html">Pokémon Go !</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
 
           <ul class="nav navbar-nav">
-            <li><a href="/index.html">Inicio</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="#">Nosotros</a></li>
-            <li><a href="/pokedex.html">Pokédex</a></li>
+            <li><a href="pokedex.html">Pokédex</a></li>
           </ul>
 
         </div><!--/.navbar-collapse -->
@@ -84,9 +84,9 @@
       <div class="row">
           <div class="col-lg-12">
               <ul class="nav nav-pills nav-justified footer-nav">
-                  <li><a href="/index.html">© 2022 PoKeMoN Go !</a></li>
+                  <li><a href="index.html">© 2022 PoKeMoN Go !</a></li>
                   <li><a href="#">Términos del servicio</a></li>
-                  <li><a href="/privacidad.html">Privacidad</a></li>
+                  <li><a href="privacidad.html">Privacidad</a></li>
               </ul>
           </div>
       </div>
