--- a/raid.html
+++ b/raid.html
@@ -6,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="ThemeFactory.net">
+    <meta name="description" content="Pagina web desarollada para TAW, MNTI UMU">
+    <meta name="author" content="Amaia y Nicolas">
 
-    <title>Jumbotron Template for Bootstrap</title>
+    <title>Guía Pokémon GO !</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="./css/jumbotron.css" rel="stylesheet">
+    <link href="./css/main.css" rel="stylesheet">
 
   </head>
 
@@ -35,9 +35,10 @@
         <div id="navbar" class="navbar-collapse collapse">
 
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="#">Nostros</a></li>
+            <li><a href="pokedex.html">Pokédex</a></li>
+            <li class="active"><a href="#">Raids</a></li>
           </ul>
 
         </div><!--/.navbar-collapse -->
@@ -46,7 +47,7 @@
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
      <nav class="jumbo-nav">
-      <div class="navigation-wrapper">
+      <div class="navigation-wrapper" id="pokedexNav">
         <div class="navigation">
           <div class="header-logo">
             <a href="#">
@@ -65,34 +66,18 @@
       </div>
     </nav>
 
-    <div class="container">
-      <hr>
-      
+    <div class="text-center footer">
+      <hr />
       <div class="row">
-        <div class="col-md-12">
-          <div class="enhanced">
-          <h1>Lorem Ipsum</h1>
-          <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-
-Why do we use it?
-It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
-
-
-Where does it come from?
-Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-
-The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
-          </p>
+          <div class="col-lg-12">
+              <ul class="nav nav-pills nav-justified footer-nav">
+                  <li><a href="index.html">© 2022 PoKeMoN Go !</a></li>
+                  <li><a href="terminos.html">Términos del servicio</a></li>
+                  <li><a href="privacidad.html">Privacidad</a></li>
+              </ul>
           </div>
-        </div>
       </div>
-
-      <footer>
-        <p>&copy; 2015 Company, Inc.</p>
-      </footer>
-    </div> <!-- /container -->
-
+    </div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
