--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Inicio</a></li>
-            <li><a href="#">Nostros</a></li>
             <li><a href="pokedex.html">Pokédex</a></li>
             <li><a href="raid.html">Raids</a></li>
+            <li><a href="equipo.html">Equipo</a></li>
           </ul>
 
         </div><!--/.navbar-collapse -->
@@ -123,16 +123,13 @@ The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for t
 
     </div> <!-- /container -->
 
-  <div class="text-center footer">
-      <hr />
-      <div class="row">
-          <div class="col-lg-12">
-              <ul class="nav nav-pills nav-justified footer-nav">
-                  <li><a href="#">© 2022 PoKeMoN Go !</a></li>
-                  <li><a href="terminos.html">Términos del servicio</a></li>
-                  <li><a href="privacidad.html">Privacidad</a></li>
-              </ul>
-          </div>
+    <div class="text-center footer">
+      <div class="col-lg-12">
+        <ul class="nav nav-pills nav-justified footer-nav">
+          <li><a href="index.html">© 2022 PoKeMoN Go !</a></li>
+          <li><a href="terminos.html">Términos del servicio</a></li>
+          <li><a href="privacidad.html">Privacidad</a></li>
+        </ul>
       </div>
   </div>
 
