--- a/pokedex.html
+++ b/pokedex.html
@@ -23,6 +23,7 @@
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
+        
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
@@ -32,13 +33,13 @@
           </button>
           <a class="navbar-brand projectname" href="index.html">Pokémon Go !</a>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
 
+        <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="#">Nostros</a></li>
             <li class="active"><a href="#">Pokédex</a></li>
             <li><a href="raid.html">Raids</a></li>
+            <li><a href="equipo.html">Equipo</a></li>
           </ul>
 
         </div>
@@ -91,6 +92,7 @@
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Entiendo !</button>
+                <button type="button" id="cerrarModal" class="btn btn-danger" data-dismiss="modal">No mostrar más</button>
               </div>
             </div>
           </div>
@@ -108,15 +110,12 @@
     </nav>
 
   <div class="text-center footer">
-      <hr />
-      <div class="row">
-          <div class="col-lg-12">
-              <ul class="nav nav-pills nav-justified footer-nav">
-                  <li><a href="index.html">© 2022 PoKeMoN Go !</a></li>
-                  <li><a href="terminos.html">Términos del servicio</a></li>
-                  <li><a href="privacidad.html">Privacidad</a></li>
-              </ul>
-          </div>
+      <div class="col-lg-12">
+        <ul class="nav nav-pills nav-justified footer-nav">
+          <li><a href="index.html">© 2022 PoKeMoN Go !</a></li>
+          <li><a href="terminos.html">Términos del servicio</a></li>
+          <li><a href="privacidad.html">Privacidad</a></li>
+        </ul>
       </div>
   </div>
 
