--- a/raid.html
+++ b/raid.html
@@ -36,9 +36,9 @@
 
           <ul class="nav navbar-nav">
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="#">Nostros</a></li>
             <li><a href="pokedex.html">Pokédex</a></li>
             <li class="active"><a href="#">Raids</a></li>
+            <li><a href="equipo.html">Equipo</a></li>
           </ul>
 
         </div><!--/.navbar-collapse -->
@@ -67,17 +67,14 @@
     </nav>
 
     <div class="text-center footer">
-      <hr />
-      <div class="row">
-          <div class="col-lg-12">
-              <ul class="nav nav-pills nav-justified footer-nav">
-                  <li><a href="index.html">© 2022 PoKeMoN Go !</a></li>
-                  <li><a href="terminos.html">Términos del servicio</a></li>
-                  <li><a href="privacidad.html">Privacidad</a></li>
-              </ul>
-          </div>
+      <div class="col-lg-12">
+        <ul class="nav nav-pills nav-justified footer-nav">
+          <li><a href="index.html">© 2022 PoKeMoN Go !</a></li>
+          <li><a href="terminos.html">Términos del servicio</a></li>
+          <li><a href="privacidad.html">Privacidad</a></li>
+        </ul>
       </div>
-    </div>
+  </div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
