--- a/equipo.html
+++ b/equipo.html
@@ -80,7 +80,7 @@
         <div class="container">
           <div class="row" id="equipo">
 
-            <div class="col-md-4">
+            <div class="col-md-6 col-lg-4 col-sm-6">
 
               <div class="pokeball-wrapper">
                 <img src="./images/pokeball.png" />
@@ -98,7 +98,7 @@
 
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-6 col-lg-4 col-sm-6">
 
               <div class="pokeball-wrapper">
                 <img src="./images/pokeball.png" />
@@ -116,7 +116,7 @@
 
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-6 col-lg-4 col-sm-6">
 
               <div class="pokeball-wrapper">
                 <img src="./images/pokeball.png" />
@@ -134,7 +134,7 @@
 
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-6 col-lg-4 col-sm-6">
 
               <div class="pokeball-wrapper">
                 <img src="./images/pokeball.png" />
@@ -152,7 +152,7 @@
 
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-6 col-lg-4 col-sm-6">
 
               <div class="pokeball-wrapper">
                 <img src="./images/pokeball.png" />
@@ -170,7 +170,7 @@
 
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-6 col-lg-4 col-sm-6">
 
               <div class="pokeball-wrapper">
                 <img src="./images/pokeball.png" />
@@ -198,7 +198,7 @@
     </nav>
 
   <div class="text-center footer">
-      <div class="col-lg-12">
+      <div class="col-lg-12" id="footer-especial">
         <ul class="nav nav-pills nav-justified footer-nav">
           <li><a href="index.html">© 2022 PoKeMoN Go !</a></li>
           <li><a href="terminos.html">Términos del servicio</a></li>
