--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for t
     </div> <!-- /container -->
 
     <div class="text-center footer">
-      <div class="col-lg-12">
+      <div class="col-lg-12" id="footer-especial">
         <ul class="nav nav-pills nav-justified footer-nav">
           <li><a href="index.html">© 2022 PoKeMoN Go !</a></li>
           <li><a href="terminos.html">Términos del servicio</a></li>
