--- a/pokedex.html
+++ b/pokedex.html
@@ -105,6 +105,9 @@
 
           </div>
         </div>
+        <div id="pokedex-bottom">
+          <button type="button" id="addPokemon" class="btn btn-primary btn-lg">Mostrar más</button>
+        </div>
         
       </div>
     </nav>
