Limpiado el codigo

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <h2 class="text-center">¿Cómo jugar?</h2>
               <img class="trainer medium" src="./images/entrenador.png" />
               <p>¿Te gustaría aprender de los mejores entrenadores del mundo para así poder llegar a ser el mejor entrenador que habrá jamás ? Empieza ahora mismo, solo te hará falta un telefono móvil Android o iOS y tener ganas de aventuras, acción intrepidante y estar preparado para hacer muchos amigos. ¿A qué esperas?</p>
-              <p><a class="btn btn-info" href="https://pokemongolive.com/es/#learn" role="button">¡Quiero aprender! &raquo;</a></p>
+              <p><a class="btn btn-info" target="_blank" href="https://pokemongolive.com/es/#learn" role="button">¡Quiero aprender! &raquo;</a></p>
             </div>
           </div>
 
