--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta name="description" content="Pagina web desarollada para TAW, MNTI UMU">
   <meta name="author" content="Amaia y Nicolas">
 
+  <link rel="icon" type="image/x-icon" href="/images/pokemongo.ico">
+
   <title>Guía Pokémon GO !</title>
 
   <!-- Bootstrap core CSS -->
@@ -67,9 +69,15 @@
             </div>
             <div class="enhanced">
               <h2 class="text-center">¿Cómo jugar?</h2>
-              <img class="trainer medium" src="./images/entrenador.png" />
-              <p>¿Te gustaría aprender de los mejores entrenadores del mundo para así poder llegar a ser el mejor entrenador que habrá jamás ? Empieza ahora mismo, solo te hará falta un telefono móvil Android o iOS y tener ganas de aventuras, acción intrepidante y estar preparado para hacer muchos amigos. ¿A qué esperas?</p>
-              <p><a class="btn btn-info" target="_blank" href="https://pokemongolive.com/es/#learn" role="button">¡Quiero aprender! &raquo;</a></p>
+              <div class="row">
+                <div class="col-md-4">
+                  <img class="trainer medium" src="./images/entrenador.png" />
+                </div>
+                <div class="col-md-8">
+                  <p class="text-justify text-trainer-idx">¿Te gustaría aprender de los mejores entrenadores del mundo para así poder llegar a ser el mejor entrenador que habrá jamás ? Empieza ahora mismo, solo te hará falta un telefono móvil Android o iOS y tener ganas de aventuras, acción intrepidante y estar preparado para hacer muchos amigos. ¿A qué esperas?</p>
+                  <div class="container-fluid text-center"><a class="btn btn-info" target="_blank" href="https://pokemongolive.com/es/#learn" role="button">¡Quiero aprender! &raquo;</a></div>
+                </div>
+              </div>
             </div>
           </div>
 
@@ -79,30 +87,35 @@
             </div>
             <div class="enhanced">
               <h2 class="text-center">Próximos Eventos</h2>
+
               <div id="evento">
                 <div class="row">
-                  <div class="col-4">
+                  <div class="col-md-4">
                     <img class="pokemon small" src="https://assets.thesilphroad.com/img/pokemon/icons/96x96/258.png" />
                   </div>
-                  <div class="col-8">
+                  <div class="col-md-8">
                     <h4>Día de la Comunidad clásico</h4>
                     <h5>Mudkip, 10 de Abril</h5>
                     <h6>Horario: de 14:00 a 17:00</h6>
                     <p><a class="btn btn-default" href="https://pokemongolive.com/es/post/community-day-classic-mudkip-april-2022/" role="button">Más información &raquo;</a></p>
                   </div>
+                </div>
               </div>
-              </div>
+
               <div id="evento">
-                <div class="col-4">
-                  <img class="pokemon small" src="https://assets.thesilphroad.com/img/pokemon/icons/96x96/759.png" />
-                </div>
-                <div class="col-8">
-                  <h4>Día de la Comunidad Abril</h4>
-                  <h5>Stufful, 23 de Abril</h5>
-                  <h6>Horario: de 14:00 a 17:00</h6>
-                  <p><a class="btn btn-default" href="https://pokemongolive.com/es/post/communityday-april22-stufful/" role="button">Más información &raquo;</a></p>
+                <div class="row">
+                  <div class="col-md-4">
+                    <img class="pokemon small" src="https://assets.thesilphroad.com/img/pokemon/icons/96x96/759.png" />
+                  </div>
+                  <div class="col-md-8">
+                    <h4>Día de la Comunidad Abril</h4>
+                    <h5>Stufful, 23 de Abril</h5>
+                    <h6>Horario: de 14:00 a 17:00</h6>
+                    <p><a class="btn btn-default" href="https://pokemongolive.com/es/post/communityday-april22-stufful/" role="button">Más información &raquo;</a></p>
+                  </div>
                 </div>
               </div>
+
             </div>
           </div>
 
