--- a/raid.html
+++ b/raid.html
@@ -30,7 +30,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand projectname" href="#">Pokémon Go !</a>
+          <a class="navbar-brand projectname" href="index.html">Pokémon Go !</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
 
