--- a/raid.html
+++ b/raid.html
@@ -9,6 +9,8 @@
     <meta name="description" content="Pagina web desarollada para TAW, MNTI UMU">
     <meta name="author" content="Amaia y Nicolas">
 
+    <link rel="icon" type="image/x-icon" href="/images/pokemongo.ico">
+
     <title>Guía Pokémon GO !</title>
 
     <!-- Bootstrap core CSS -->
