Ahora los tipos se muestran en dos columnas.

--- a/pokedex.html
+++ b/pokedex.html
@@ -73,23 +73,29 @@
                   Cada pokemon es de un tipo distinto, incluso algunos de ellos obtienen un nuevo tipo al evolucionar.
                   <br/><br/>
                   La leyenda es la siguiente:<br/>
-                  <img src="./images/types/steel.svg" /> Acero<br/>
-                  <img src="./images/types/water.svg" /> Agua<br/>
-                  <img src="./images/types/bug.svg" /> Bicho<br/>
-                  <img src="./images/types/dragon.svg" /> Dragón<br/>
-                  <img src="./images/types/electric.svg" /> Eléctrico<br/>
-                  <img src="./images/types/ghost.svg" /> Fantasma<br/>
-                  <img src="./images/types/fire.svg" /> Fuego<br/>
-                  <img src="./images/types/ice.svg" /> Hielo<br/>
-                  <img src="./images/types/fighting.svg" /> Lucha<br/>
-                  <img src="./images/types/normal.svg" /> Normal<br/>
-                  <img src="./images/types/dark.svg" /> Oscuro<br/>
-                  <img src="./images/types/grass.svg" /> Planta<br/>
-                  <img src="./images/types/psychic.svg" /> Psíquico<br/>
-                  <img src="./images/types/rock.svg" /> Roca<br/>
-                  <img src="./images/types/ground.svg" /> Tierra<br/>
-                  <img src="./images/types/poison.svg" /> Veneno<br/>
-                  <img src="./images/types/flying.svg" /> Volador<br/>
+                  <div class="row">
+                    <div class="col-lg-6 col-md-6">
+                      <img src="./images/types/steel.svg" /> Acero<br/>
+                      <img src="./images/types/water.svg" /> Agua<br/>
+                      <img src="./images/types/bug.svg" /> Bicho<br/>
+                      <img src="./images/types/dragon.svg" /> Dragón<br/>
+                      <img src="./images/types/electric.svg" /> Eléctrico<br/>
+                      <img src="./images/types/ghost.svg" /> Fantasma<br/>
+                      <img src="./images/types/fire.svg" /> Fuego<br/>
+                      <img src="./images/types/ice.svg" /> Hielo<br/>
+                      <img src="./images/types/fighting.svg" /> Lucha<br/>
+                    </div>
+                    <div class="col-lg-6 col-md-6">
+                      <img src="./images/types/normal.svg" /> Normal<br/>
+                      <img src="./images/types/dark.svg" /> Oscuro<br/>
+                      <img src="./images/types/grass.svg" /> Planta<br/>
+                      <img src="./images/types/psychic.svg" /> Psíquico<br/>
+                      <img src="./images/types/rock.svg" /> Roca<br/>
+                      <img src="./images/types/ground.svg" /> Tierra<br/>
+                      <img src="./images/types/poison.svg" /> Veneno<br/>
+                      <img src="./images/types/flying.svg" /> Volador<br/>
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="modal-footer">
