--- a/terminos.html
+++ b/terminos.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Pagina web desarollada para TAW, MNTI UMU">
     <meta name="author" content="Amaia y Nicolas">
 
-    <link rel="icon" type="image/x-icon" href="/images/pokemongo.ico">
+    <link rel="icon" type="image/x-icon" href="./images/pokemongo.ico">
 
     <title>Guía Pokemon GO !</title>
 
