--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
   <!-- Custom styles for this template -->
   <link href="./css/main.css" rel="stylesheet">
 
+  <!-- Manifest. Our PWA -->
+  <link rel="manifest" href="/manifest.json">
+
+  <!-- Some specific vendor suggestions --> 
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="Pokemon Go!">
+  <link rel="apple-touch-icon" href="images/icons/icon-152x152.png">
+  
+  <meta name="msapplication-TileImage" content="images/icons/icon-full.png">
+  <meta name="msapplication-TileColor" content="#2F3BA2">
+
 </head>
 
 <body>
@@ -195,6 +207,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="./js/bootstrap.min.js"></script>
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <script src="./js/app.js"></script>
 </body>
 
 </html>
