Div offline añadido. Falta el Service Worker.

--- a/equipo.html
+++ b/equipo.html
@@ -57,6 +57,7 @@
           </ul>
         </div>
       </div>
+      <div class="offline" style="display: none;" >OFFLINE</div>
     </nav>
 
      <nav class="jumbo-nav">
