--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
       </div>
       <!--/.navbar-collapse -->
     </div>
+    <div class="offline" style="display: none;">OFFLINE</div>
   </nav>
 
   <!-- Main jumbotron for a primary marketing message or call to action -->
