--- a/privacidad.html
+++ b/privacidad.html
@@ -57,6 +57,7 @@
 
         </div><!--/.navbar-collapse -->
       </div>
+      <div class="offline" style="display: none;" >OFFLINE</div>
     </nav>
 
     <!-- Battery Modal -->
