--- a/pokedex.html
+++ b/pokedex.html
@@ -58,6 +58,7 @@
 
         </div>
       </div>
+      <div class="offline" style="display: none;" >OFFLINE</div>
     </nav>
 
      <nav class="jumbo-nav">
