--- a/raid.html
+++ b/raid.html
@@ -96,8 +96,31 @@
           </div>
         </div>
 
+        <div class="container" id="offline-container" style="display: none;">
+          <div class="row">
+            
+            <div class="col-md-12">
+              <div class="pokeball-wrapper">
+                <img src="./images/pokeball.png" />
+              </div>
+              <div class="enhanced">
+                <h2 class="text-center">¿Cómo jugar?</h2>
+                <div class="row">
+                  <div class="col-md-4">
+                    <img class="trainer medium" src="./images/entrenador.png" />
+                  </div>
+                  <div class="col-md-8">
+                    <p class="text-justify text-trainer-idx">Parece que estás offline... esta página está restringida, es necesario el internet !</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
         <!-- Example row of columns -->
-        <div class="container">
+        <div class="container" id="online-container">
           <div class="row" id="raid-bosses">
                         
           </div>
