--- a/index.html
+++ b/index.html
@@ -173,6 +173,21 @@
   </nav>
 
   <div class="container">
+
+    <hr>
+
+    <div class="row">
+      <div class="col-md-12">
+        <h1>Mi ubicación</h1>
+        <div class="enhanced" id="map">
+          <!-- Aqui va el mapa de google maps-->
+        </div>
+        <div class="text-center">
+          <button id="compartirUbicacion" class="btn btn-primary" data-toggle="tooltip" data-placement="bottom">Compartir mi ubicación!</button>
+        </div>
+      </div>
+    </div>
+
     <hr>
 
     <div class="row">
@@ -234,6 +249,9 @@
   <script src="./js/bootstrap.min.js"></script>
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   <script src="./js/app.js"></script>
+  <script src="./js/index.js"></script>
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQC7TLoigLRJVsGD9VVqUqJEEkGKmvVq8&callback=initMap&v=weekly" defer></script>
 </body>
 
 </html>
