Pokedex y Raid en offline. Añadido media queries

--- a/pokedex.html
+++ b/pokedex.html
@@ -152,10 +152,10 @@
                 <img src="./images/pokeball.png" />
               </div>
               <div class="enhanced">
-                <h2 class="text-center">¿Cómo jugar?</h2>
-                <div class="row">
+                <h2 class="text-center">Sin Internet</h2>
+                <div class="row" id="offline_row">
                   <div class="col-md-4">
-                    <img class="trainer medium" src="./images/entrenador.png" />
+                    <img class="trainer medium" src="./images/offline.png" />
                   </div>
                   <div class="col-md-8">
                     <p class="text-justify text-trainer-idx">Parece que estás offline... esta página está restringida, es necesario el internet !</p>
